[package]
name = "injector-rs"
version = "0.1.0"
edition = '2021'
rust-version = "1.56"
license = "MIT"
homepage = "https://moonclient.xyz/"
documentation = "https://docs.rs/injector-rs/"
repository = "https://github.com/moon-client/injector-rs"
description = "Rust bindings to an injector library"
readme = "README.md"
keywords = ["injection", "dll-injection"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
injector-sys = "0.1.0"
thiserror = "1.0.30"