[package]
name = "injector-sys"
version = "0.1.0"
edition = '2021'
rust-version = "1.56"
license = "MIT"
homepage = "https://moonclient.xyz/"
documentation = "https://docs.rs/injector-sys/"
repository = "https://github.com/moon-client/injector-rs"
description = "low level rust bindings to an injector library"
readme = "README.md"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"


[build-dependencies]
bindgen = "0.59.2"